@@ -32,6 +32,8 @@
        for folders with property modifications. (Stefan)
 - NEW: Repository browser shows svn:externals as sub-trees. (Stefan Fuhrmann)
 - NEW: Improved filter in the log dialog. (Stefan)
+- NEW: The state of the "hide unrelated changed paths" in the log
+       dialog is remembered over sessions. (Stefan)
 
 Version 1.6.6
 - BUG: The /url parameter was ignored for import commands. (Stefan)
